<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="91dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolbar">

        <TextView
            android:layout_width="100dp"
            android:layout_height="27dp"
            android:id="@+id/log"
            android:text="@string/log"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/back"
            android:layout_width="48dp"
            android:layout_height="27dp"
            android:layout_gravity="start"
            android:layout_marginLeft="30dp"
            android:text="返回"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="@color/blue"

            />
    </androidx.appcompat.widget.Toolbar>
    
    <EditText
        android:layout_width="368dp"
        android:layout_height="54dp"
        android:hint="@string/phone"
        android:id="@+id/phone"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/edit"
        android:layout_marginTop="16dp"
        android:inputType="phone"
        android:maxLength="11"
        />


    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="54dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/phone"
        android:background="@drawable/edit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        android:id="@+id/log_linearlayout"
        >
        <EditText
            android:layout_width="200dp"
            android:layout_height="54dp"
            android:id="@+id/verification_code"
            android:hint="@string/verification_code"
            app:layout_constraintTop_toBottomOf="@id/phone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/edit"
            android:maxLength="6"
            android:inputType="number"
            />
        <TextView
            android:layout_width="168dp"
            android:layout_height="54dp"
            android:layout_gravity="end"
            android:text="@string/getCode"
            android:id="@+id/getCode"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="@color/blue"
            />

    </LinearLayout>
    
    <TextView
        android:layout_width="336dp"
        android:layout_height="50dp"
        android:id="@+id/confirm_log"
        app:layout_constraintTop_toBottomOf="@id/log_linearlayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:background="@drawable/radius_full_gray"
        android:text="@string/log2"
        android:gravity="center"
        android:textSize="17dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>