<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.HomeActivity"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="91dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolbar">

        <TextView
            android:layout_width="100dp"
            android:layout_height="27dp"
            android:id="@+id/recommend_or_my"
            android:text="@string/IhRecommend"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center"

            />
        <TextView
            android:id="@+id/log_out"
            android:layout_width="100dp"
            android:layout_height="27dp"
            android:layout_gravity="end"
            android:layout_marginRight="30dp"
            android:textColor="@color/blue"
            android:textSize="15dp"
            android:textStyle="bold"
            android:gravity="end"
            android:paddingTop="5dp"
            />
    </androidx.appcompat.widget.Toolbar>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/view"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/view"
        app:layout_constraintBottom_toTopOf="@id/linearlayout1"
        android:background="#26000000"


        />

    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="0dp"
        android:layout_height="72dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/linearlayout2"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        >
        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@drawable/recommend_on"
            android:layout_gravity="center"
            android:id="@+id/recommend_image"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/recommend"
            android:gravity="center"
            android:id="@+id/recommend_text"
            android:textColor="@color/blue"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearlayout2"
        android:layout_width="0dp"
        android:layout_height="72dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/linearlayout1"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        >
        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@drawable/my_no"
            android:layout_gravity="center"
            android:id="@+id/my_image"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/my"
            android:gravity="center"
            android:id="@+id/my_text"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>